@@ -10,6 +10,7 @@ smokekde (4:4.7.1-1) UNRELEASED; urgency=low
 
   [ Pino Toscano ]
   * Generate libraries shlibs based on the current version.
+  * Tighten the various libraries dependencies to the current version.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 23 Sep 2011 10:47:45 -0500
 
